--- a/build.properties
+++ b/build.properties
@@ -1,4 +1,6 @@
 # Project specific information
+#package=deng
+#robot.class=${package}.Deng
 package=ca.warp7.robot
 robot.class=${package}.Warp7Robot
 simulation.world.file=/usr/share/frcsim/worlds/GearsBotDemo.world
