--- a/build.properties
+++ b/build.properties
@@ -5,4 +5,4 @@ package=ca.warp7.robot
 robot.class=${package}.Warp7Robot
 simulation.world.file=/usr/share/frcsim/worlds/GearsBotDemo.world
 #Uncomment and point at user libraries to include them in the build. Do not put libraries in the \wpilib\java folder, this folder is completely overwritten on plugin update.
-userLibs=${user.home}/Documents/sos/Warp7-2016-Robot/lib/Pathfinder-Java.jar
+userLibs=${basedir}/lib/Pathfinder-Java.jar
